    - Implemented formal <class Response> in server.py for better compatibility
    - Added proper response codes for the server in <class Response>
    - Added <class Log> in server.py to track events
    - Gave .md extensions to README and CHANGELOG

ALPHA v0.0.0.2
    - Minor edits to README.md
    - Changed <class Log> to write to a new file (timestamped) when it dumps
        - Created logs folder, deleted log.log.
    - Copied current test code over to main.py
    - Commented server.py
    - Added cookie support to parse() in <class Server> (really should have had that all along)

ALPHA v0.0.0.3
    - Fixed some issues with cookie management
    - Work has begun on home.html

ALPHA v0.0.0.4
    - Created neat red, green, and blue buttons for the site
    - Renamed project to Project Mercury

ALPHA v0.0.0.5
    - Added optional severity levels to <class Log> output
    - Created <class Account> in user.py
    - Added account loading and saving in main.py
    - Created transactions.log for logging payments

ALPHA v0.0.0.6
    - Renamed user.py to account.py to avoid confusion
    - Button CSS moved to buttons.css
    - Actual work to home.html (central text div, background)

ALPHA v0.0.0.7
    - Added cookie support to main.py
    - Added attach_file() to <class Response> if you don't want to send_file()
    - Added response code 307 to alleviate annoyances with code 301
    - Server.send() now automatically wraps strings in Responses
    - Response codes now wrap themselves in Responses, so you can still attach cookies and stuff with every code

ALPHA v0.0.0.8
    - Accounts now have usernames and passwords
    - Modularized the server code, put .dat files in folder, reorganized all that modularized server code
    - Changed home.html background to an <img> rather than a property of <body>
    - Created a console page for remote server interaction (still needs to be scripted)

ALPHA v0.0.0.9
    -